# Live2DAvatarAI

./: .gitignore  MAINTENANCE_CHECKLIST.md  README.md  gradle.properties  settings.gradle.kts
634. Vtuber 165 218/: 165 218.model3.json  165 218.physics3.json  165 218.vtube.json  items_pinned_to_model.json
634. Vtuber 165 218/exp/: 02 dance 2b.exp3.json  ACC 2 [BRB].exp3.json  EXP 10 [YANDERE].exp3.json  EXP 2 [EXCITED].exp3.json  EXP 3 [SAD].exp3.json  EXP 4 [POUT].exp3.json  EXP 6 [SHOCKED].exp3.json  chibi.exp3.json  idle.exp3.json  jump 2b.exp3.json  normal jump.exp3.json
634. Vtuber 165 218/motion/: 02 dance 2b.motion3.json  idle.motion3.json  jump 2b.motion3.json  walk 2b.motion3.json
Komi/: Komi.moc3  Komi.model3.json  Komi.physics3.json  Komi.vtube.json  READ_ME.txt  cc_names_Komi.cfg  items_pinned_to_model.json
Komi/Expressions/: aura_exp.exp3.json  cat_ear_exp.exp3.json  eye_shine_exp.exp3.json  eye_size.exp3.json  nose_exp.exp3.json  pout_exp.exp3.json
Komi/Motions/: Happy.motion3.json  Idle.motion3.json  Komi.motion3.json  Menacing.motion3.json  Panting.motion3.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: FragSprite.frag
app/src/main/cpp/: CMakeLists.txt  CubismSampleViewMatrix_Common.cpp  JniBridgeC.cpp  LAppDefine.cpp  LAppDefine.hpp  LAppDelegate.cpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  LAppView.cpp  LAppView_Common.cpp  LAppWavFileHandler_Common.cpp  LAppWavFileHandler_Common.hpp  MouseActionManager_Common.cpp  TouchManager_Common.cpp
(+37 files in other folders)
